# laba3

./: CMakeLists.txt  all.cpp  all.h  arctg1.h  is_prime.cpp  is_prime.h  main.cpp  main2.cpp  shift_right.cpp  shift_right.h  to_p.h  zad1_proc28.cpp  zad1_proc28.h  zad2_proc14.cpp  zad2_proc14.h  zad4_thetri14.cpp  zad4_thetri14.h  zad6.cpp  zad6.h
