cmake_minimum_required(VERSION 4.0)
project(laba3)

set(CMAKE_CXX_STANDARD 23)

add_executable(laba3 zad1_proc28.cpp
        is_prime.h
        is_prime.cpp
        zad2_proc14.cpp
        shift_right.h
        shift_right.cpp
        main.cpp
        zad1_proc28.h
        zad2_proc14.h
        zad4_thetri14.cpp)
